fix[minor]: image cropping + style fix on profile image in hardwarehulp + convert of banner title to h2

--- a/apps/hardwarehulp/src/styles/main.scss
+++ b/apps/hardwarehulp/src/styles/main.scss
@@ -43,6 +43,10 @@ html {
   color: orange !important;
 }
 
+#banner .inner > h2 {
+  color: orange !important;
+}
+
 .inner > p {
   max-width: 800px;
   margin-left: auto;
@@ -1242,6 +1246,7 @@ table.alt tbody tr td {
   img {
     margin: 1rem;
     height: 5rem;
+    width: 5rem;
     vertical-align: middle;
   }
 
